4 April 2007
+ Updated language functions

Version 1.0.1
---------------------------------------------------
19 February 2007
+ Added translate function
+ Removed constructor reference