@@ -1,0 +1,11 @@
+<?php
+
+  /**
+   * @version $Id$
+   * @author Matthew McNaney <mcnaney at gmail dot com>
+   */
+
+  // For a more condense menu, try 'alt_mini_admin.tpl'
+define('MINIADMIN_TEMPLATE', 'mini_admin.tpl');
+
+?>
